--- a/src/datascience/FrmPrincipal.form
+++ b/src/datascience/FrmPrincipal.form
@@ -221,6 +221,9 @@
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
             <Component class="javax.swing.JTree" name="lstProjeto">
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="lstProjetoMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
